--- a/ball_python_temp_control.yaml
+++ b/ball_python_temp_control.yaml
@@ -1,9 +1,8 @@
 blueprint:
   name: Ball Python Temp Control
   description: >
-    Automatically regulates day and night temperatures for a ball python enclosure
-    using a basking light and CTE based on warm-side temperature sensor. Includes
-    a failsafe to shut down all heat sources if the temperature exceeds 35°C.
+    Regulates basking and CTE heat sources based on day/night mode and warm-side temperature.
+    Includes failsafe shutdown at 35°C.
   domain: automation
   input:
     warm_side_sensor:
@@ -75,7 +74,7 @@ action:
       temp_buffer: "{{ inputs.buffer | float }}"
 
   - choose:
-      # 🔥 FAILSAFE: Immediately shut off all heating if too hot
+      # 🔥 FAILSAFE
       - conditions:
           - condition: template
             value_template: "{{ current_temp > 35 }}"
@@ -88,7 +87,7 @@ action:
               entity_id: !input cte_switch
           - stop: true
 
-      # 🧠 Main temp regulation logic
+      # ❄️ Too Cold
       - conditions:
           - condition: template
             value_template: "{{ current_temp < (target_temp - temp_buffer) }}"
@@ -102,8 +101,42 @@ action:
             target:
               entity_id: !input basking_switch
 
+      # 🔥 Too Hot
       - conditions:
           - condition: template
             value_template: "{{ current_temp > (target_temp + temp_buffer) }}"
         sequence:
-          - service:
+          - service: switch.turn_off
+            target:
+              entity_id: !input cte_switch
+          - condition: template
+            value_template: "{{ states(inputs.day_mode_boolean) == 'on' }}"
+          - service: light.turn_on
+            target:
+              entity_id: !input basking_switch
+
+      # ✅ Within Target Range
+      - conditions:
+          - condition: template
+            value_template: >
+              {{ (current_temp >= (target_temp - temp_buffer)) and
+                 (current_temp <= (target_temp + temp_buffer)) }}
+        sequence:
+          - service: switch.turn_off
+            target:
+              entity_id: !input cte_switch
+          - choose:
+              - conditions:
+                  - condition: template
+                    value_template: "{{ states(inputs.day_mode_boolean) == 'on' }}"
+                sequence:
+                  - service: light.turn_on
+                    target:
+                      entity_id: !input basking_switch
+              - conditions:
+                  - condition: template
+                    value_template: "{{ states(inputs.day_mode_boolean) != 'on' }}"
+                sequence:
+                  - service: light.turn_off
+                    target:
+                      entity_id: !input basking_switch
