--- a/ball_python_temp_control.yaml
+++ b/ball_python_temp_control.yaml
@@ -67,24 +67,13 @@ trigger:
 condition: []
 
 action:
-  - variables:
-      warm_sensor: !input warm_side_sensor
-      day_mode: !input day_mode_boolean
-      current_temp: "{{ states(warm_sensor) | float }}"
-      is_day: "{{ is_state(day_mode, 'on') }}"
-      target_temp: >
-        {% if is_state(day_mode, 'on') %}
-          {{ float(!input day_target_temp) }}
-        {% else %}
-          {{ float(!input night_target_temp) }}
-        {% endif %}
-      buffer: !input buffer
-
   - choose:
 
+      # FAILSAFE
       - conditions:
           - condition: template
-            value_template: "{{ current_temp > 35 }}"
+            value_template: >
+              {{ states('!input warm_side_sensor') | float > 35 }}
         sequence:
           - service: light.turn_off
             target:
@@ -94,37 +83,50 @@ action:
               entity_id: !input cte_switch
           - stop: true
 
+      # TOO COLD
       - conditions:
           - condition: template
-            value_template: "{{ current_temp < (target_temp - buffer | float) }}"
+            value_template: >
+              {% set temp = states('!input warm_side_sensor') | float %}
+              {% set target = (is_state('!input day_mode_boolean', 'on') | iif(!input day_target_temp, !input night_target_temp)) | float %}
+              {% set buffer = !input buffer | float %}
+              {{ temp < (target - buffer) }}
         sequence:
           - service: switch.turn_on
             target:
               entity_id: !input cte_switch
           - condition: template
-            value_template: "{{ is_day }}"
+            value_template: "{{ is_state('!input day_mode_boolean', 'on') }}"
           - service: light.turn_on
             target:
               entity_id: !input basking_switch
 
+      # TOO HOT
       - conditions:
           - condition: template
-            value_template: "{{ current_temp > (target_temp + buffer | float) }}"
+            value_template: >
+              {% set temp = states('!input warm_side_sensor') | float %}
+              {% set target = (is_state('!input day_mode_boolean', 'on') | iif(!input day_target_temp, !input night_target_temp)) | float %}
+              {% set buffer = !input buffer | float %}
+              {{ temp > (target + buffer) }}
         sequence:
           - service: switch.turn_off
             target:
               entity_id: !input cte_switch
           - condition: template
-            value_template: "{{ is_day }}"
+            value_template: "{{ is_state('!input day_mode_boolean', 'on') }}"
           - service: light.turn_on
             target:
               entity_id: !input basking_switch
 
+      # IN RANGE
       - conditions:
           - condition: template
             value_template: >
-              {{ (current_temp >= (target_temp - buffer | float)) and
-                 (current_temp <= (target_temp + buffer | float)) }}
+              {% set temp = states('!input warm_side_sensor') | float %}
+              {% set target = (is_state('!input day_mode_boolean', 'on') | iif(!input day_target_temp, !input night_target_temp)) | float %}
+              {% set buffer = !input buffer | float %}
+              {{ temp >= (target - buffer) and temp <= (target + buffer) }}
         sequence:
           - service: switch.turn_off
             target:
@@ -132,14 +134,14 @@ action:
           - choose:
               - conditions:
                   - condition: template
-                    value_template: "{{ is_day }}"
+                    value_template: "{{ is_state('!input day_mode_boolean', 'on') }}"
                 sequence:
                   - service: light.turn_on
                     target:
                       entity_id: !input basking_switch
               - conditions:
                   - condition: template
-                    value_template: "{{ not is_day }}"
+                    value_template: "{{ is_state('!input day_mode_boolean', 'off') }}"
                 sequence:
                   - service: light.turn_off
                     target:
