--- a/ball_python_lighting.yaml
+++ b/ball_python_lighting.yaml
@@ -5,6 +5,7 @@ blueprint:
     - Turns UVB ON + WLED to Morning preset 1 hour after sunrise
     - Turns UVB OFF + WLED to Night preset 30 min after sunset
     - Turns all WLED OFF at 22:00
+    - Optionally toggles day_mode input_boolean
   domain: automation
   input:
     uvb_light:
@@ -57,8 +58,13 @@ trigger:
     at: "22:00:00"
     id: night_shutdown
 
+variables:
+  day_mode_entity: !input day_mode_boolean
+
 action:
   - choose:
+
+      # 🌅 1 hour after sunrise
       - conditions:
           - condition: trigger
             id: sunrise_plus_1h
@@ -77,12 +83,13 @@ action:
           - choose:
               - conditions:
                   - condition: template
-                    value_template: "{{ !input day_mode_boolean != '' }}"
+                    value_template: "{{ day_mode_entity != '' }}"
                 sequence:
                   - service: input_boolean.turn_on
                     target:
-                      entity_id: !input day_mode_boolean
+                      entity_id: "{{ day_mode_entity }}"
 
+      # 🌇 30 min after sunset
       - conditions:
           - condition: trigger
             id: sunset_plus_30m
@@ -101,12 +108,13 @@ action:
           - choose:
               - conditions:
                   - condition: template
-                    value_template: "{{ !input day_mode_boolean != '' }}"
+                    value_template: "{{ day_mode_entity != '' }}"
                 sequence:
                   - service: input_boolean.turn_off
                     target:
-                      entity_id: !input day_mode_boolean
+                      entity_id: "{{ day_mode_entity }}"
 
+      # 🌌 Full lights off at 22:00
       - conditions:
           - condition: trigger
             id: night_shutdown
